<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:includeFontPadding="false"
        android:text="@string/ranking"
        android:textAlignment="center"
        android:textColor="@color/black_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_nick_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:includeFontPadding="false"
        android:text="@string/nickname"
        android:textAlignment="center"
        android:textColor="@color/black_text"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="19dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:includeFontPadding="false"
        android:text="@string/answer"
        android:textAlignment="center"
        android:textColor="@color/black_text"
        android:textSize="14sp" />

</LinearLayout>