<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".RankingFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:includeFontPadding="false"
        android:text="@string/ranking_title"
        android:textColor="@color/black_text"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:fontFamily="@font/notosanscjkkr_bold"
            android:includeFontPadding="false"
            android:text="@string/ranking"
            android:textAlignment="center"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/notosanscjkkr_bold"
            android:includeFontPadding="false"
            android:text="@string/nickname"
            android:textAlignment="center"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:fontFamily="@font/notosanscjkkr_bold"
            android:includeFontPadding="false"
            android:text="@string/answer"
            android:textAlignment="center"
            android:textColor="@color/black_text"
            android:textSize="14sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/ll_my_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_header" />

    <LinearLayout
        android:id="@+id/ll_my_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/background_yellow"
        android:layout_marginBottom="18dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_regame">

        <TextView
            android:id="@+id/tv_my_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:includeFontPadding="false"
            android:text="@string/ranking"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_my_nickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/nickname"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_my_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="19dp"
            android:includeFontPadding="false"
            android:text="@string/answer"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_regame"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:fontFamily="@font/notosanscjkkr_bold"
        android:background="@color/colorAccent"
        android:text="@string/regame"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>